fix flickering

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -69,6 +69,7 @@ html {
   }
 
   scroll-behavior: smooth;
+  background-color: $tertiaryBGColor;
 }
 
 body {
